error.log
    Checking klein v0.2.5 (C:\Users\Adarsh AS\Desktop\Project\klein)
error[E0624]: method `get_max_cursor_x` is private
   --> src\events\mod.rs:396:42
    |
396 |                 let max_x = app.editor().get_max_cursor_x(y);
    |                                          ^^^^^^^^^^^^^^^^ private method
    |
   ::: src\editor.rs:361:5
    |
361 |     fn get_max_cursor_x(&self, line_y: usize) -> usize {
    |     -------------------------------------------------- private method defined here

For more information about this error, try `rustc --explain E0624`.
error: could not compile `klein` (bin "klein") due to 1 previous error
